[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basicsr"
version = "1.3.2"
description = "BasicSR is an open source image and video restoration toolbox based on PyTorch."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "Xintao Wang", email = "xintao.wang@outlook.com"},
]
keywords = ["computer vision", "restoration", "super resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "addict",
    "future",
    "lmdb",
    "numpy",
    "opencv-python",
    "Pillow",
    "pyyaml",
    "requests",
    "scikit-image",
    "scipy",
    "tb-nightly",
    "torch>=1.7",
    "torchvision",
    "tqdm",
    "yapf",
]

[project.urls]
Homepage = "https://github.com/xinntao/BasicSR"
Repository = "https://github.com/xinntao/BasicSR.git"
Documentation = "https://basicsr.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/xinntao/BasicSR/issues"

[tool.setuptools.packages.find]
where = ["."]